; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-rs5c372.c_rs5c_hr2reg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/rtc/extr_rtc-rs5c372.c_rs5c_hr2reg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rs5c372 = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rs5c372*, i32)* @rs5c_hr2reg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rs5c_hr2reg(%struct.rs5c372* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.rs5c372*, align 8
  %5 = alloca i32, align 4
  store %struct.rs5c372* %0, %struct.rs5c372** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.rs5c372*, %struct.rs5c372** %4, align 8
  %7 = getelementptr inbounds %struct.rs5c372, %struct.rs5c372* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* %5, align 4
  %12 = call i32 @bin2bcd(i32 %11)
  store i32 %12, i32* %3, align 4
  br label %35

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = icmp ugt i32 %14, 12
  br i1 %15, label %16, label %21

16:                                               ; preds = %13
  %17 = load i32, i32* %5, align 4
  %18 = sub i32 %17, 12
  %19 = call i32 @bin2bcd(i32 %18)
  %20 = or i32 32, %19
  store i32 %20, i32* %3, align 4
  br label %35

21:                                               ; preds = %13
  %22 = load i32, i32* %5, align 4
  %23 = icmp eq i32 %22, 12
  br i1 %23, label %24, label %27

24:                                               ; preds = %21
  %25 = call i32 @bin2bcd(i32 12)
  %26 = or i32 32, %25
  store i32 %26, i32* %3, align 4
  br label %35

27:                                               ; preds = %21
  %28 = load i32, i32* %5, align 4
  %29 = icmp eq i32 %28, 0
  br i1 %29, label %30, label %32

30:                                               ; preds = %27
  %31 = call i32 @bin2bcd(i32 12)
  store i32 %31, i32* %3, align 4
  br label %35

32:                                               ; preds = %27
  %33 = load i32, i32* %5, align 4
  %34 = call i32 @bin2bcd(i32 %33)
  store i32 %34, i32* %3, align 4
  br label %35

35:                                               ; preds = %32, %30, %24, %16, %10
  %36 = load i32, i32* %3, align 4
  ret i32 %36
}

declare dso_local i32 @bin2bcd(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
